--- a/lab/OverwatchPredictSR.ipynb
+++ b/lab/OverwatchPredictSR.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -69,19 +69,32 @@
     "        \n",
     "## Loading Data\n",
     "        \n",
-    "def generate_players():\n",
+    "def generate_players(limit=1e10):\n",
     "    \n",
     "    for filename in os.listdir(os.path.join('..', 'profiles')):\n",
     "        \n",
-    "        player = Player.from_file(os.path.join('..', 'profiles', filename))\n",
+    "        if limit < 0: return\n",
     "        \n",
-    "        if 'error' not in player.json:\n",
+    "        try: # If it can't read the player then just ignore file\n",
     "            \n",
-    "            yield player\n",
+    "            player = Player.from_file(os.path.join('..', 'profiles', filename))\n",
+    "        \n",
+    "            if 'error' not in player.json and get_competitive_rank(player, 'us'):\n",
+    "\n",
+    "                yield player\n",
+    "                \n",
+    "                limit -= 1\n",
+    "                \n",
+    "            else: # Throw Away\n",
+    "                \n",
+    "                print('Deleting Profile...', filename)\n",
+    "                \n",
+    "                os.remove(os.path.join('..', 'profiles', filename))\n",
+    "                \n",
+    "        except:\n",
+    "            pass\n",
     "\n",
     "def load_data(get_vector):\n",
-    "    \n",
-    "    data_len = 0\n",
     "\n",
     "    unscaled_X, unscaled_y = [], []\n",
     "\n",
@@ -97,12 +110,6 @@
     "\n",
     "                unscaled_X.append(get_vector(player, 'us'))\n",
     "                unscaled_y.append(rank)\n",
-    "                \n",
-    "                data_len += 1\n",
-    "                \n",
-    "                if data_len > 30000:\n",
-    "                    \n",
-    "                    break\n",
     "\n",
     "    unscaled_X = np.array(unscaled_X, dtype=np.float64)\n",
     "    unscaled_y = np.array(unscaled_y, dtype=np.float64)\n",
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -160,7 +167,7 @@
     "    \"\"\"\n",
     "    Accuracy\n",
     "    \"\"\"\n",
-    "    diff = K.abs(y_pred - y_true) < 0.05 # Within 250 SR\n",
+    "    diff = K.abs(y_pred - y_true) * 5000\n",
     "    \n",
     "    return K.mean(diff, axis=-1)\n"
    ]
@@ -364,7 +371,7 @@
     "    \n",
     "    plt.plot(history.history['acc_metric'])\n",
     "    plt.plot(history.history['val_acc_metric'])\n",
-    "    plt.title('Model Accuracy (+/- 250 SR)')\n",
+    "    plt.title('Model Accuracy')\n",
     "    plt.ylabel('Avg Accuracy')\n",
     "    plt.xlabel('epoch')\n",
     "    plt.legend(['Train', 'Test'], loc='upper right')\n",
@@ -374,22 +381,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7942, 3090)\n",
-      "(7942,)\n"
+      "(12407, 2677)\n",
+      "(12407,)\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYoAAAD8CAYAAABpcuN4AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADkJJREFUeJzt3X+o3fV9x/Hna9E5qZXpchskSXdTyD8qm60hCC3DTVaz\nOhb3j6SwmT+kGehGywYjrrBufwTsYN2QTcGt0sjaSqAVQ60baVYo+8Om19bWJJqZ1oi5RJOuDNt/\n3LTv/XE+rmd3uZ+b3HvuOSfJ8wFfzue8v78+30/+eOX769xUFZIkLebnJt0BSdJ0MygkSV0GhSSp\ny6CQJHUZFJKkLoNCktRlUEiSugwKSVKXQSFJ6rps0h1Yytq1a2t2dnbS3ZCkC8qzzz77w6qaGcW2\npj4oZmdnmZubm3Q3JOmCkuSVUW3LS0+SpC6DQpLUZVBIkroMCklSl0EhSeoyKCRJXQaFJKnLoJAk\ndRkUkqSuqX8zW5pWs7ufmti+Tzxwx8T2rUuPZxSSpC6DQpLUZVBIkroMCklSl0EhSeoyKCRJXQaF\nJKnLoJAkdRkUkqSuJYMiycYkX09yNMmRJB9v9WuTHEjyUvu8Zmid+5McT3Isye1D9ZuTPN/mPZgk\nq3NYkqRROZczireAP6mq64FbgPuSXA/sBg5W1WbgYPtOm7cDuAHYBjyUZE3b1sPAx4DNbdo2wmOR\nJK2CJYOiqk5V1bdb+8fAC8B6YDuwty22F7iztbcDj1fVm1X1MnAc2JrkOuDqqnqmqgp4bGgdSdKU\nOq97FElmgfcD3wTWVdWpNus1YF1rrwdeHVrtZKutb+2FdUnSFDvnoEhyFfAl4BNV9cbwvHaGUKPq\nVJJdSeaSzJ05c2ZUm5UkLcM5BUWSyxmExOer6sut/Hq7nET7PN3q88DGodU3tNp8ay+s/z9V9UhV\nbamqLTMzM+d6LJKkVXAuTz0F+CzwQlV9ZmjWfmBna+8Enhyq70hyRZJNDG5aH2qXqd5Ickvb5t1D\n60iSptS5/OGiDwK/Dzyf5LlW+zPgAWBfknuAV4C7AKrqSJJ9wFEGT0zdV1Vvt/XuBT4HXAk83SZJ\n0hRbMiiq6t+Axd53uG2RdfYAe85SnwNuPJ8OSpImyzezJUldBoUkqcugkCR1GRSSpK5zeepJmmqz\nu5+adBeki5pnFJKkLoNCktRlUEiSugwKSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUZVBI\nkroMCklSl0EhSeoyKCRJXQaFJKnLoJAkdRkUkqQug0KS1GVQSJK6DApJUpdBIUnqMigkSV0GhSSp\ny6CQJHUZFJKkLoNCktRlUEiSugwKSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUtWRQJHk0\nyekkh4dqf5FkPslzbfrI0Lz7kxxPcizJ7UP1m5M83+Y9mCSjPxxJ0qidyxnF54BtZ6n/TVXd1Kav\nAiS5HtgB3NDWeSjJmrb8w8DHgM1tOts2JUlTZsmgqKpvAD86x+1tBx6vqjer6mXgOLA1yXXA1VX1\nTFUV8Bhw53I7LUkan5Xco/ijJN9rl6auabX1wKtDy5xstfWtvbAuSZpyyw2Kh4H3ATcBp4C/HlmP\ngCS7kswlmTtz5swoNy1JOk/LCoqqer2q3q6qnwL/AGxts+aBjUOLbmi1+dZeWF9s+49U1Zaq2jIz\nM7OcLkqSRmRZQdHuObzjd4F3nojaD+xIckWSTQxuWh+qqlPAG0luaU873Q08uYJ+S5LG5LKlFkjy\nReBWYG2Sk8CngFuT3AQUcAL4A4CqOpJkH3AUeAu4r6rebpu6l8ETVFcCT7dJkjTllgyKqvroWcqf\n7Sy/B9hzlvoccON59U6SNHG+mS1J6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklSl0Eh\nSeoyKCRJXQaFJKnLoJAkdRkUkqQug0KS1GVQSJK6DApJUpdBIUnqMigkSV0GhSSpy6CQJHUZFJKk\nLoNCktRlUEiSugwKSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklSl0EhSeq6\nbNId0MVhdvdTk+6CpFXiGYUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklS15JBkeTRJKeTHB6qXZvk\nQJKX2uc1Q/PuT3I8ybEktw/Vb07yfJv3YJKM/nAkSaN2LmcUnwO2LajtBg5W1WbgYPtOkuuBHcAN\nbZ2Hkqxp6zwMfAzY3KaF25QkTaElg6KqvgH8aEF5O7C3tfcCdw7VH6+qN6vqZeA4sDXJdcDVVfVM\nVRXw2NA6kqQpttx7FOuq6lRrvwasa+31wKtDy51stfWtvbB+Vkl2JZlLMnfmzJlldlGSNAorvpnd\nzhBqBH0Z3uYjVbWlqrbMzMyMctOSpPO03KB4vV1Oon2ebvV5YOPQchtabb61F9YlSVNuuUGxH9jZ\n2juBJ4fqO5JckWQTg5vWh9plqjeS3NKedrp7aB1J0hRb8tdjk3wRuBVYm+Qk8CngAWBfknuAV4C7\nAKrqSJJ9wFHgLeC+qnq7bepeBk9QXQk83SZJ0pRbMiiq6qOLzLptkeX3AHvOUp8Dbjyv3kmSJs43\nsyVJXQaFJKnLoJAkdRkUkqQu/2a2dAGa1N8oP/HAHRPZrybLMwpJUpdBIUnqMigkSV0GhSSpy6CQ\nJHUZFJKkLoNCktRlUEiSugwKSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklS\nl0EhSeoyKCRJXQaFJKnLoJAkdRkUkqSuyybdAUkXjtndT01kvyceuGMi+9WAZxSSpC6DQpLUZVBI\nkroMCklSl0EhSeoyKCRJXQaFJKnL9ygkTb1Jvb8BvsMBnlFIkpZgUEiSugwKSVLXioIiyYkkzyd5\nLslcq12b5ECSl9rnNUPL35/keJJjSW5faeclSatvFGcUv15VN1XVlvZ9N3CwqjYDB9t3klwP7ABu\nALYBDyVZM4L9S5JW0WpcetoO7G3tvcCdQ/XHq+rNqnoZOA5sXYX9S5JGaKVBUcDXkjybZFerrauq\nU639GrCutdcDrw6te7LVJElTbKXvUXyoquaTvAc4kOTF4ZlVVUnqfDfaQmcXwHvf+94VdlGStBIr\nOqOoqvn2eRp4gsGlpNeTXAfQPk+3xeeBjUOrb2i1s233karaUlVbZmZmVtJFSdIKLTsokrwrybvf\naQMfBg4D+4GdbbGdwJOtvR/YkeSKJJuAzcCh5e5fkjQeK7n0tA54Isk72/lCVf1zkm8B+5LcA7wC\n3AVQVUeS7AOOAm8B91XV2yvqvSRp1S07KKrqB8CvnqX+H8Bti6yzB9iz3H1KksbPN7MlSV0GhSSp\ny6CQJHUZFJKkLoNCktRlUEiSugwKSVKXfzP7IjPJvy0s6eLkGYUkqcugkCR1GRSSpC6DQpLUZVBI\nkroMCklSl0EhSeoyKCRJXQaFJKnLoJAkdRkUkqQug0KS1GVQSJK6DApJUpdBIUnqMigkSV0GhSSp\ny6CQJHX5p1AlqWNSf174xAN3TGS/Z+MZhSSpy6CQJHUZFJKkLoNCktRlUEiSugwKSVKXQSFJ6jIo\nJEldvnC3Cib1go4krQbPKCRJXQaFJKnLoJAkdY09KJJsS3IsyfEku8e9f0nS+Rnrzewka4C/B34T\nOAl8K8n+qjq6GvvzprIkrdy4zyi2Aser6gdV9V/A48D2MfdBknQexh0U64FXh76fbDVJ0pSayvco\nkuwCdrWvP0lybJL9GZG1wA8n3Ykp5dgszrFZ3EU9Nvn0ilZfC/zyaHoy/qCYBzYOfd/Qav9HVT0C\nPDKuTo1Dkrmq2jLpfkwjx2Zxjs3iHJvFtbGZHdX2xn3p6VvA5iSbkvw8sAPYP+Y+SJLOw1jPKKrq\nrSR/CPwLsAZ4tKqOjLMPkqTzM/Z7FFX1VeCr497vFLioLqWNmGOzOMdmcY7N4kY6NqmqUW5PknSR\n8Sc8JEldBsUKJHk0yekkh4dq1yY5kOSl9nnN0Lz720+XHEty+1D95iTPt3kPJsm4j2WUkmxM8vUk\nR5McSfLxVndskl9IcijJd9vY/GWrX/Jj844ka5J8J8lX2nfHBkhyoh3Tc0nmWm08Y1NVTsucgF8D\nPgAcHqr9FbC7tXcDn27t64HvAlcAm4DvA2vavEPALUCAp4HfmvSxrXBcrgM+0NrvBv69Hb9jMziO\nq1r7cuCb7fgu+bEZGqM/Br4AfKV9d2wGx3QCWLugNpax8YxiBarqG8CPFpS3A3tbey9w51D98ap6\ns6peBo4DW5NcB1xdVc/U4F/xsaF1LkhVdaqqvt3aPwZeYPAGvmMz8JP29fI2FY4NAEk2AHcA/zhU\ndmwWN5axMShGb11VnWrt14B1rb3Yz5esb+2F9YtCklng/Qz+5+zY8L+XVp4DTgMHqsqx+Zm/Bf4U\n+OlQzbEZKOBrSZ5tv14BYxqbqfwJj4tFVVWSS/axsiRXAV8CPlFVbwxfCr2Ux6aq3gZuSvKLwBNJ\nblww/5IcmyS/DZyuqmeT3Hq2ZS7VsWk+VFXzSd4DHEjy4vDM1RwbzyhG7/V2ekf7PN3qi/18yXxr\nL6xf0JJcziAkPl9VX25lx2ZIVf0n8HVgG44NwAeB30lygsEvS/9Gkn/CsQGgqubb52ngCQa/xj2W\nsTEoRm8/sLO1dwJPDtV3JLkiySZgM3ConTa+keSW9vTB3UPrXJDacXwWeKGqPjM0y7FJZtqZBEmu\nZPC3WV7EsaGq7q+qDTX4jaIdwL9W1e/h2JDkXUne/U4b+DBwmHGNzaTv5F/IE/BF4BTw3wyu9d0D\n/BJwEHgJ+Bpw7dDyn2Tw9MExhp40ALa0f/TvA39HexHyQp2ADzG4nvo94Lk2fcSxKYBfAb7TxuYw\n8OetfsmPzYJxupWfPfV0yY8N8D4GTzF9FzgCfHKcY+Ob2ZKkLi89SZK6DApJUpdBIUnqMigkSV0G\nhSSpy6CQJHUZFJKkLoNCktT1P8QPc3+CzSThAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYoAAAD8CAYAAABpcuN4AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEtpJREFUeJzt3V+M3eWd3/H3Zw11rE1QYJm1vLZVO5L3AlDXWUaWpUQV\nTZTFDVVNbpAjdfEFwpFgs4m6UmVnpSZ7YYmtNkmFWpCcBmHabFyrSYQVYCNDkaJIBWfIOmAbXLyL\nER4ZPLtp5HDjLs63F+dhczrxPDPjOZ4Z8Psl/XSe8/39nt+fx0Iffv/OpKqQJGkmv7HUOyBJWt4M\nCklSl0EhSeoyKCRJXQaFJKnLoJAkdRkUkqQug0KS1GVQSJK6rlnqHZjNjTfeWBs2bFjq3ZCk95QX\nXnjh76pqbBTrmjUoknwA+CGwsi3/P6rqy0m+AtwLTLVFv1RVT7Y+e4B7gIvAH1fVD1r9VuBRYBXw\nJPCFmuU3RDZs2MDExMT8j0ySrmJJXh/VuuZyRnEB+ERVvZ3kWuBHSZ5q875eVX8xbeduAnYANwO/\nAzyd5Her6iLwMINweZ5BUGwDnkKStGzNeo+iBt5uX69tU+8sYDtwoKouVNVrwClgS5I1wHVV9Vw7\ni3gMuHNhuy9JutLmdDM7yYokR4FzwOGqer7N+nySF5M8kuT6VlsLvDHU/UyrrW3t6XVJ0jI2p6Co\nqotVtRlYx+Ds4BYGl5E+AmwGzgJfHdVOJdmVZCLJxNTU1OwdJElXzLwej62qnwPPAtuq6q0WIL8E\nvgFsaYtNAuuHuq1rtcnWnl6/1Hb2VdV4VY2PjY3kpr0k6TLNGhRJxpJ8uLVXAZ8CXmn3HN71GeBY\nax8CdiRZmWQjsAk4UlVngfNJtiYJcDfw+AiPRZJ0Bczlqac1wP4kKxgEy8Gq+n6S/5pkM4Mb26eB\nzwFU1fEkB4ETwDvA/e2JJ4D7+NXjsU/hE0+StOxluf8p1PHx8fI9CkmanyQvVNX4KNblT3hIkrqW\n/U94SMvVht1PLNm2Tz9wx5JtW1cfzygkSV0GhSSpy6CQJHUZFJKkLoNCktRlUEiSugwKSVKXQSFJ\n6vKFO73nLeWLb9LVwDMKSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklSl0Eh\nSeoyKCRJXbMGRZIPJDmS5KdJjif5s1a/IcnhJK+2z+uH+uxJcirJySS3D9VvTfJSm/dgklyZw5Ik\njcpcziguAJ+oqt8DNgPbkmwFdgPPVNUm4Jn2nSQ3ATuAm4FtwENJVrR1PQzcC2xq07YRHosk6QqY\nNShq4O329do2FbAd2N/q+4E7W3s7cKCqLlTVa8ApYEuSNcB1VfVcVRXw2FAfSdIyNad7FElWJDkK\nnAMOV9XzwOqqOtsWeRNY3dprgTeGup9ptbWtPb1+qe3tSjKRZGJqamrOByNJGr05BUVVXayqzcA6\nBmcHt0ybXwzOMkaiqvZV1XhVjY+NjY1qtZKkyzCvp56q6ufAswzuLbzVLifRPs+1xSaB9UPd1rXa\nZGtPr0uSlrG5PPU0luTDrb0K+BTwCnAI2NkW2wk83tqHgB1JVibZyOCm9ZF2mep8kq3taae7h/pI\nkpapufwp1DXA/vbk0m8AB6vq+0n+F3AwyT3A68BdAFV1PMlB4ATwDnB/VV1s67oPeBRYBTzVJknS\nMjZrUFTVi8BHL1H/e+CTM/TZC+y9RH0CuOXXe0iSlivfzJYkdRkUkqQug0KS1GVQSJK6DApJUpdB\nIUnqMigkSV0GhSSpy6CQJHUZFJKkLoNCktRlUEiSugwKSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSS\npC6DQpLUZVBIkroMCklS16xBkWR9kmeTnEhyPMkXWv0rSSaTHG3Tp4f67ElyKsnJJLcP1W9N8lKb\n92CSXJnDkiSNyjVzWOYd4E+q6idJPgS8kORwm/f1qvqL4YWT3ATsAG4Gfgd4OsnvVtVF4GHgXuB5\n4ElgG/DUaA5FknQlzHpGUVVnq+onrf0L4GVgbafLduBAVV2oqteAU8CWJGuA66rquaoq4DHgzgUf\ngSTpiprXPYokG4CPMjgjAPh8kheTPJLk+lZbC7wx1O1Mq61t7el1SdIyNuegSPJB4DvAF6vqPIPL\nSB8BNgNnga+OaqeS7EoykWRiampqVKuVJF2GOQVFkmsZhMS3quq7AFX1VlVdrKpfAt8AtrTFJ4H1\nQ93Xtdpka0+v/5qq2ldV41U1PjY2Np/jkSSN2FyeegrwTeDlqvraUH3N0GKfAY619iFgR5KVSTYC\nm4AjVXUWOJ9ka1vn3cDjIzoOSdIVMpennj4G/CHwUpKjrfYl4LNJNgMFnAY+B1BVx5McBE4weGLq\n/vbEE8B9wKPAKgZPO/nEkyQtc7MGRVX9CLjU+w5PdvrsBfZeoj4B3DKfHZQkLS3fzJYkdRkUkqQu\ng0KS1GVQSJK6DApJUpdBIUnqMigkSV0GhSSpy6CQJHUZFJKkLoNCktRlUEiSugwKSVKXQSFJ6jIo\nJEldBoUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklSl0EhSeqaNSiSrE/ybJITSY4n+UKr35DkcJJX\n2+f1Q332JDmV5GSS24fqtyZ5qc17MEmuzGFJkkZlLmcU7wB/UlU3AVuB+5PcBOwGnqmqTcAz7Ttt\n3g7gZmAb8FCSFW1dDwP3ApvatG2ExyJJugJmDYqqOltVP2ntXwAvA2uB7cD+tth+4M7W3g4cqKoL\nVfUacArYkmQNcF1VPVdVBTw21EeStEzN6x5Fkg3AR4HngdVVdbbNehNY3dprgTeGup1ptbWtPb1+\nqe3sSjKRZGJqamo+uyhJGrE5B0WSDwLfAb5YVeeH57UzhBrVTlXVvqoar6rxsbGxUa1WknQZ5hQU\nSa5lEBLfqqrvtvJb7XIS7fNcq08C64e6r2u1ydaeXpckLWNzeeopwDeBl6vqa0OzDgE7W3sn8PhQ\nfUeSlUk2MrhpfaRdpjqfZGtb591DfSRJy9Q1c1jmY8AfAi8lOdpqXwIeAA4muQd4HbgLoKqOJzkI\nnGDwxNT9VXWx9bsPeBRYBTzVJknSMjZrUFTVj4CZ3nf45Ax99gJ7L1GfAG6Zzw5KkpaWb2ZLkroM\nCklSl0EhSeoyKCRJXQaFJKnLoJAkdRkUkqQug0KS1GVQSJK6DApJUpdBIUnqMigkSV0GhSSpy6CQ\nJHXN5e9RSLPasPuJpd4FSVeIZxSSpC6DQpLUZVBIkrq8RyG9By3VPaHTD9yxJNvV0vKMQpLUZVBI\nkrpmDYokjyQ5l+TYUO0rSSaTHG3Tp4fm7UlyKsnJJLcP1W9N8lKb92CSjP5wJEmjNpczikeBbZeo\nf72qNrfpSYAkNwE7gJtbn4eSrGjLPwzcC2xq06XWKUlaZmYNiqr6IfCzOa5vO3Cgqi5U1WvAKWBL\nkjXAdVX1XFUV8Bhw5+XutCRp8SzkHsXnk7zYLk1d32prgTeGljnTamtbe3pdkrTMXW5QPAx8BNgM\nnAW+OrI9ApLsSjKRZGJqamqUq5YkzdNlBUVVvVVVF6vql8A3gC1t1iSwfmjRda022drT6zOtf19V\njVfV+NjY2OXsoiRpRC4rKNo9h3d9Bnj3iahDwI4kK5NsZHDT+khVnQXOJ9nanna6G3h8AfstSVok\ns76ZneTbwG3AjUnOAF8GbkuyGSjgNPA5gKo6nuQgcAJ4B7i/qi62Vd3H4AmqVcBTbZIkLXOzBkVV\nffYS5W92lt8L7L1EfQK4ZV57J0lacr6ZLUnqMigkSV0GhSSpy6CQJHUZFJKkLoNCktRlUEiSugwK\nSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklSl0EhSeoyKCRJXQaFJKnLoJAk\ndRkUkqSuWYMiySNJziU5NlS7IcnhJK+2z+uH5u1JcirJySS3D9VvTfJSm/dgkoz+cCRJozaXM4pH\ngW3TaruBZ6pqE/BM+06Sm4AdwM2tz0NJVrQ+DwP3ApvaNH2dkqRlaNagqKofAj+bVt4O7G/t/cCd\nQ/UDVXWhql4DTgFbkqwBrquq56qqgMeG+kiSlrFrLrPf6qo629pvAqtbey3w3NByZ1rtH1p7el3S\ne8iG3U8syXZPP3DHkmxXAwu+md3OEGoE+/KPkuxKMpFkYmpqapSrliTN0+UGxVvtchLt81yrTwLr\nh5Zb12qTrT29fklVta+qxqtqfGxs7DJ3UZI0CpcbFIeAna29E3h8qL4jycokGxnctD7SLlOdT7K1\nPe1091AfSdIyNus9iiTfBm4DbkxyBvgy8ABwMMk9wOvAXQBVdTzJQeAE8A5wf1VdbKu6j8ETVKuA\np9okSVrmZg2KqvrsDLM+OcPye4G9l6hPALfMa+8kSUvON7MlSV0GhSSpy6CQJHUZFJKkLoNCktRl\nUEiSugwKSVKXQSFJ6jIoJEldBoUkqcugkCR1GRSSpC6DQpLUZVBIkroMCklSl0EhSeoyKCRJXQaF\nJKnLoJAkdRkUkqSua5Z6BzRaG3Y/sdS7IOl9xjMKSVLXgs4okpwGfgFcBN6pqvEkNwD/HdgAnAbu\nqqr/05bfA9zTlv/jqvrBQrYv6eqwlGfKpx+4Y8m2vVyM4oziX1TV5qoab993A89U1SbgmfadJDcB\nO4CbgW3AQ0lWjGD7kqQr6EpcetoO7G/t/cCdQ/UDVXWhql4DTgFbrsD2JUkjtNCgKODpJC8k2dVq\nq6vqbGu/Caxu7bXAG0N9z7Tar0myK8lEkompqakF7qIkaSEW+tTTx6tqMslvA4eTvDI8s6oqSc13\npVW1D9gHMD4+Pu/+kqTRWdAZRVVNts9zwPcYXEp6K8kagPZ5ri0+Cawf6r6u1SRJy9hlB0WS30zy\noXfbwB8Ax4BDwM622E7g8dY+BOxIsjLJRmATcORyty9JWhwLufS0GvheknfX85dV9VdJfgwcTHIP\n8DpwF0BVHU9yEDgBvAPcX1UXF7T3kqQr7rKDoqr+Fvi9S9T/HvjkDH32Ansvd5uSpMXnm9mSpC6D\nQpLUZVBIkroMCklSl0EhSeoyKCRJXQaFJKnLoJAkdRkUkqQug0KS1GVQSJK6DApJUpdBIUnqMigk\nSV0GhSSpy6CQJHUZFJKkroX8KVTNYMPuJ5Z6FySNyFL993z6gTuWZLuX4hmFJKnLoJAkdRkUkqSu\nRQ+KJNuSnExyKsnuxd6+JGl+FvVmdpIVwH8GPgWcAX6c5FBVnbgS2/OmsiQt3GKfUWwBTlXV31bV\n/wUOANsXeR8kSfOw2EGxFnhj6PuZVpMkLVPL8j2KJLuAXe3r20lOLuX+jMiNwN8t9U4sU47NzByb\nmb2vxyZ/vqDuNwL/dDR7svhBMQmsH/q+rtX+P1W1D9i3WDu1GJJMVNX4Uu/HcuTYzMyxmZljM7M2\nNhtGtb7FvvT0Y2BTko1J/gmwAzi0yPsgSZqHRT2jqKp3kvwR8ANgBfBIVR1fzH2QJM3Pot+jqKon\ngScXe7vLwPvqUtqIOTYzc2xm5tjMbKRjk6oa5fokSe8z/oSHJKnLoFiAJI8kOZfk2FDthiSHk7za\nPq8fmren/XTJySS3D9VvTfJSm/dgkiz2sYxSkvVJnk1yIsnxJF9odccm+UCSI0l+2sbmz1r9qh+b\ndyVZkeSvk3y/fXdsgCSn2zEdTTLRaoszNlXldJkT8M+B3weODdX+A7C7tXcDf97aNwE/BVYCG4G/\nAVa0eUeArUCAp4B/udTHtsBxWQP8fmt/CPjf7fgdm8FxfLC1rwWeb8d31Y/N0Bj9W+Avge+3747N\n4JhOAzdOqy3K2HhGsQBV9UPgZ9PK24H9rb0fuHOofqCqLlTVa8ApYEuSNcB1VfVcDf4VHxvq855U\nVWer6iet/QvgZQZv4Ds2A2+3r9e2qXBsAEiyDrgD+C9DZcdmZosyNgbF6K2uqrOt/SawurVn+vmS\nta09vf6+kGQD8FEG/+fs2PCPl1aOAueAw1Xl2PzKfwT+HfDLoZpjM1DA00leaL9eAYs0NsvyJzze\nL6qqkly1j5Ul+SDwHeCLVXV++FLo1Tw2VXUR2Jzkw8D3ktwybf5VOTZJ/hVwrqpeSHLbpZa5Wsem\n+XhVTSb5beBwkleGZ17JsfGMYvTeaqd3tM9zrT7Tz5dMtvb0+ntakmsZhMS3quq7rezYDKmqnwPP\nAttwbAA+BvzrJKcZ/LL0J5L8NxwbAKpqsn2eA77H4Ne4F2VsDIrROwTsbO2dwOND9R1JVibZCGwC\njrTTxvNJtranD+4e6vOe1I7jm8DLVfW1oVmOTTLWziRIsorB32Z5BceGqtpTVetq8BtFO4D/WVX/\nBseGJL+Z5EPvtoE/AI6xWGOz1Hfy38sT8G3gLPAPDK713QP8FvAM8CrwNHDD0PJ/yuDpg5MMPWkA\njLd/9L8B/hPtRcj36gR8nMH11BeBo236tGNTAP8M+Os2NseAf9/qV/3YTBun2/jVU09X/dgAH2Hw\nFNNPgePAny7m2PhmtiSpy0tPkqQug0KS1GVQSJK6DApJUpdBIUnqMigkSV0GhSSpy6CQJHX9P5F2\nZ+OUpGsfAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x227312499b0>"
+       "<matplotlib.figure.Figure at 0x2c16f0965c0>"
       ]
      },
      "metadata": {},
@@ -450,7 +457,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Run (Load from disk)\n",
